# weather_testing

./: .gitignore  .pre-commit-config.yaml  .template.env  .template.env.docker  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  run_main.py
alembic/: env.py
api/: __init__.py
api/api_v1/: __init__.py  some_endpoint.py
app/: alembic.ini  main.py  run_main.py
app/alembic/: env.py
app/alembic/versions/: 2025_05_25_1754-90cc42142187_create_anonymous_users_table.py  2025_05_26_1022-3c0ac686983d_create_cities_table.py  2025_05_26_1356-7c39e0149bf9_create_user_city_histories_table.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  some_endpoint.py  weather.py
app/api/api_v1/middlewares/: cookies.py
app/core/: __init__.py  settings.py
app/core/database/: __init__.py  db_helper.py
app/core/database/models/: anonymous_user.py  base.py  city.py  search_history.py
app/core/database/models/mixins/: __init__.py
app/core/gunicorn/: logger.py
app/core/repositories/: base.py  city.py  cookies.py  user_city.py
app/core/use_cases/: city.py  user.py  user_city.py
app/ioc/: init_container.py  sqlalchemy_providers.py
app/utils/: delete_expired_cookies.py
core/: __init__.py  settings.py
core/database/: db_helper.py
core/database/models/: base.py
core/database/models/mixins/: __init__.py
core/gunicorn/: logger.py
frontend/: Dockerfile
frontend/src/: App.jsx
frontend/src/components/: CityAutocomplete.jsx  LastCityReminder.jsx
infra/: gunicorn.conf.py
nginx/: default.conf
tests/: .template.docker.env  conftest.py  docker-compose.test.yaml
tests/core/: .template.env  settings.py
tests/fixtures/: infrastructure.py
tests/integration/: connection_test.py
tests/unit/: utils_test.py
utils/: __init__.py  case_convector.py  pluralize.py
