[tool.poetry]
name = "BaseFastAPI"
version = "0.1.0"
description = ""
authors = ["Fedorov Semen <FedorovSemen28@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
orjson = "^3.10.7"
black = "^24.10.0"
gunicorn = "^23.0.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
dishka = "^1.4.2"
greenlet = "^3.2.2"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


